--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,5 +5,6 @@ dependencies {
     testImplementation _test.junit
     androidTestImplementation _test.runner
     androidTestImplementation _test.espresso
-//    compile 'com.github.aii1991:AndroidRapidDev:v1.0.0'
+    implementation 'com.github.aii1991:AndroidRapidDev:v1.0.2'
+    implementation 'org.jsoup:jsoup:1.11.2'
 }
