--- a/build.gradle
+++ b/build.gradle
@@ -37,8 +37,8 @@ subprojects{
         compileSdkVersion _app.compileSdkVersion as Integer
         defaultConfig {
             if(isAppModule){
-                applicationId "com.boildcoffee.rapiddev"
-                multiDexEnabled true
+                applicationId "com.boiledcoffee.welfare"
+                multiDexEnabled false
             }
             minSdkVersion _app.minSdkVersion as Integer
             targetSdkVersion _app.targetSdkVersion as Integer
