--- a/app/build.gradle
+++ b/app/build.gradle
@@ -2,9 +2,13 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation _support.appcompat
     implementation _support.constraint
+    implementation 'com.android.support.constraint:constraint-layout:1.1.0'
     testImplementation _test.junit
     androidTestImplementation _test.runner
     androidTestImplementation _test.espresso
-    implementation 'com.github.aii1991:AndroidRapidDev:v1.0.4'
+
+    implementation 'com.github.aii1991:AndroidRapidDev:v1.1.0'
     implementation 'org.jsoup:jsoup:1.11.2'
+    implementation 'com.android.support:multidex:1.0.0'
+    debugImplementation 'com.amitshekhar.android:debug-db:1.0.3'
 }
