--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -3,8 +3,8 @@
     package="com.boildcoffee.welfare">
 
     <application
-        android:allowBackup="false"
         android:name="com.boiledcoffee.welfare.MyApplication"
+        android:allowBackup="false"
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
@@ -17,6 +17,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name="com.boiledcoffee.welfare.ui.ImageDetailActivity"></activity>
     </application>
 
 </manifest>
